# weatherclassificator

./: .dockerignore  .env.bot.example  .env.docker.secret.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.qwen/: settings.json  settings.json.orig
bot/: Dockerfile  PLAN.md  __main__.py  config.py  pyproject.toml
bot/handlers/: health.py  help.py  photo_handler.py  start.py  text_weather.py  text_weather_handler.py  weather_info.py
bot/services/: keyboard.py  llm_client.py  vit_classifier.py
classifier/: Dockerfile  app.py  export_onnx.py  model_loader.py  pyproject.toml
classifier/tests/: __init__.py  test_classifier.py
