[project]
name = "weatherwear-classifier"
version = "0.1.0"
description = "Weather image classification service using ViT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "torch>=2.5",
    "torchvision>=0.20",
    "transformers>=4.48",
    "pillow>=11.0",
    "python-multipart>=0.0.18",
    "datasets>=3.0",
    "accelerate>=1.0",
]
